<resources>
    <string name="app_name">Geocolector</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El nombre de usuario es inválido</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_confirm_password">La contraseña confirmada no es correcta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to MainActivity -->
    <string name="title_activity_main">Menú principal</string>
    <string name="action_settings">Configuración</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to RegistrarseActivity -->
    <string name="title_activity_registrarse">Registrarse</string>

    <!-- Strings related to ConfiguracionActivity -->
    <string name="title_activity_configuracion">Configuración</string>
    <string name="prompt_servidor">Dirección IP o nombre de Dominio</string>

    <!-- Strings related to Fragment MedirZona -->
    <string name="action_medir_zona">Medir zona</string>

    <!-- Strings related to Fragment TabComentario -->
    <string name="prompt_comentario">Escribe un comentario</string>

    <!-- Strings related to Fragment TabFoto-->
    <string name="action_camara">Cámara</string>

    <!-- Strings related to Fragment TabMedir-->
    <string name="txt_nov">Cod. Nov.:</string>
    <string name="titInfoMed">INFORMACIÓN </string>
    <string name="txtDescNov">Desc. Nov.:</string>
    <string name="txtNroMed">N° med.:</string>
    <string name="txtEstAct">Est. Act.</string>
    <string name="txtEstAnt">Est. Ant.</string>
    <string name="txtConsumo">Consumo</string>
    <string name="txtTitUsr">INFORMACIÓN DEL USUARIO</string>
    <string name="txtNroUsr">N° usuario:</string>
    <string name="txtCategoria">Categoría:</string>
    <string name="txtDireccion">Dirección:</string>
    <string name="txtTitResumen">RESUMEN RUTA DE MEDICIÓN</string>
    <string name="txtNoL">Cant. No medidos</string>
    <string name="txtLeidos">Cant. Medidos</string>
    <string name="txtMA">MA</string>
    <string name="txtMER">MER</string>
    <string name="txtMEA">MEA</string>
    <string name="txtTotal">Total</string>
    <string name="txtOrdenMed">Orden:</string>

    <!-- Strings related to Fragment DescargarRuta -->
    <string name="action_descargar_ruta">Descargar zona</string>

    <!-- Strings related to Fragment CargarZona-->
    <string name="action_cargar_zona">Cargar zona</string>

    <!-- Strings related to Fragment ZonaMedicion -->
    <string name="action_zona_medicion">Zona de medición</string>

    <!-- Strings related to Fragment VerMapa -->
    <string name="action_ver_mapa">Mapa de medidores</string>

    <!-- Strings related to Activity AdministrarActivity-->
    <string name="title_activity_administrar_cuenta">Administrar cuenta</string>


    <!-- Strings de uso general -->

    <string name="action_save">Guardar</string>
    <string name="action_delete">Borrar</string>

    <string name="search_title">Ingrese N° de Usuario</string>
    <string name="search_hint">Ingrese N° de Usuario</string>

    <string name="action_exit">Salir</string>
</resources>
