<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/action_descargar_ruta" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_medir"
            android:title="@string/action_medir_zona" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_ruta"
            android:title="@string/action_zona_medicion" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/action_ver_mapa" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_cargar"
            android:title="@string/action_cargar_zona" />
    </group>

    <item android:title="Mi cuenta">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Administrar" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="Salir" />
        </menu>
    </item>

</menu>
